--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: Robotkang
+title: 我很会养猪
 subtitle: 欢迎走进我的世界
 description: 科技、生活、音乐、人生
 # 头像里面的标题
-avatarTitle: RobotKang
+avatarTitle: 养猪
 # 头像里面的描述
-avatarDesc: 机器人赛事
-url: "https://robotkang.cc"
+avatarDesc: 章若楠
+url: "https://770818354.github.io/yangzhu"
 
 # Comment
 comment:
