--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ url: "https://770818354.github.io/yangzhu"
 
 # Comment
 comment:
-    provider: duoshuo
+    provider: 养猪
     duoshuo:
-    short_name: robotkang
+    short_name: 我很会养猪
 
 # Social
 social:
