--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: 科技、生活、音乐、人生
 avatarTitle: 养猪
 # 头像里面的描述
 avatarDesc: 章若楠
-url: "https://770818354.github.io/yangzhu"
+url: "https://yangzhu.fun"
 
 # Comment
 comment:
